# gpu_examples

./: .gitignore  .vimrc  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md  configure.sh
cmake/modules/: FindOpenCL.cmake
include/gpu_examples/histogram/: cpu_hist_generator.hpp  fake_raw_data_generator.hpp  gpu.hpp  gpu_hist_generator.hpp  hist_data_reader.hpp  raw_data_generator.hpp  test_data_reader.hpp
src/: CMakeLists.txt  main.cpp
src/histogram/: CMakeLists.txt  cpu_hist_generator.cpp  generateHistogram.cl  generateSubHists.cl  gpu.cpp  gpu_hist_generator.cpp  main.cpp  make_histogram.cpp  raw_data_generator.cpp  reduceSubHists.cl
src/histogram/tests/: doNothing.cl  fake_raw_data_generator.cpp  generateHistogram.cl  square.cl  test_cpu_hist_generator.cpp  test_cpu_histogram_generator.cpp  test_gpu.cpp  test_gpu_hist_generator.cpp  test_raw_data_generator.cpp
src/histogram/tests/data/: getFrequencies.py  testData.txt  testFrequencies.txt
src/tests/: test_stuff.cpp
